--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(KillSwitch)
 add_prx_module(${PROJECT_NAME} killswitch.c)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
+    pspdebug
+    pspdisplay
     psppower
     pspctrl
     pspge
