--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.11)
 
 project(KillSwitch)
 
-add_prx_module(${PROJECT_NAME} killswitch.c)
+add_prx_module(${PROJECT_NAME}
+    killswitch.c
+    exports.exp
+)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     pspdebug
@@ -14,7 +17,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 
 project(KillSwitchHold)
 
-add_prx_module(${PROJECT_NAME} killswitch_hold.c)
+add_prx_module(${PROJECT_NAME}
+    killswitch_hold.c
+    exports.exp
+)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     psppower
